TE contd.